Cleaning up a few findbugs warnings.